--- a/weather.html
+++ b/weather.html
@@ -14,7 +14,7 @@
   <section class="top-banner">
     <div class="container">
       <center>
-        <img src="https://d1psgljc389n8q.cloudfront.net/bootcamps/logos/VX6tpIUJa" alt="Bank logo" class="nav__logo"
+        <img src="./logo-lg - Copy.png" alt="Bank logo" class="nav__logo"
           id="logo" />
           <h1 class="heading">
             Weather App</h1>
@@ -34,7 +34,7 @@
   </section>
   <footer class="page-footer">
     <div class="container">
-      <small>Coded by <span>❤</span>FS Team</a>
+      <small>Coded by <span>❤</span>Penny Nichols</a>
       </small>
     </div>
   </footer>
